<resources>
    <string name="app_name">Cascade</string>

    <!-- Toolbar button names-->
    <string name="profile_icon">Profile</string>
    <string name="sort_icon">Sort</string>

    <!-- In app-->
    <string name="add_task">Add Task</string>
    <string name="placeholder_text" translatable="false">Placeholder Text</string>
    <string name="placeholder_date" translatable="false">Placeholder Date</string>
    <string name="placeholder_time" translatable="false">Placeholder Time</string>

    <string name="background" translatable="false">bg img</string>
    <string name="image" translatable="false">img</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="reset_password">Reset password</string>
    <string name="signed_in_as">Signed in as </string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log out</string>
    <string name="title">Title</string>
    <string name="no_reminder_set">No Reminder set</string>
    <string name="add">Add</string>
    <string name="add_a_task">Add a task…</string>
    <string name="done">Done</string>

    <!--Sort-->
    <string name="sort_colour">Sort by colour</string>
    <string name="sort_date">Sort by date</string>
    <string name="sort_alphabet">Sort alphabetically</string>
    <string name="search_icon">Search</string>

    <!--Login / Sign up-->
    <string name="account_creation_success">Account created</string>
    <string name="account_creation_failure">Account creation failed</string>
    <string name="authentication_failure">Authentication failed</string>
    <string name="field_mustNotBeEmpty">Field can\'t be empty</string>

    <!--pw reset-->
    <string name="field_pwReset">Enter a valid Email for password reset</string>
    <string name="pwReset_success">Success, check your inbox</string>
    <string name="pwReset_failure">Error, please try again</string>


</resources>
