<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- profile button -->
    <item android:id="@+id/action_profile"
        android:title="@string/profile_icon"
        android:icon="@drawable/ic_person_white_24dp"
        app:showAsAction="always" />


    <!-- sort button -->
    <item android:id="@+id/action_sort"
    android:title="@string/sort_icon"
    android:icon="@drawable/ic_sort_white"
    app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/menu_sortByColour"
                android:title="@string/sort_colour" />
            <item
                android:id="@+id/menu_sortByDate"
                android:title="@string/sort_date" />
            <item
                android:id="@+id/menu_sortByAlphabet"
                android:title="@string/sort_alphabet" />
        </menu>
    </item>

</menu>