<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:background="@drawable/dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/are_you_sure"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:background="@drawable/btn_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/cancelDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textColor="@color/lightBlue"
        android:padding="5dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteButton"/>

</android.support.constraint.ConstraintLayout>
