<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dark"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/banner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bannerRV"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/edit_background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/background" /> <!--background gradient-->

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/edit_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="6dp"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/product_sans"
                app:layout_constraintTop_toBottomOf="@id/edit_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/edit_edit"/> <!--title-->

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/edit_date"
                android:fontFamily="@font/product_sans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" /> <!--date-->

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/edit_time"
                android:fontFamily="@font/product_sans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" /> <!--time-->

            <Button
                android:id="@+id/edit_edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/ic_edit_black"
                app:layout_constraintBottom_toBottomOf="parent"/> <!--edit button-->

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView> <!--banner-->

    <android.support.v7.widget.CardView
        android:id="@+id/bannerRV"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/white"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintBottom_toTopOf="@id/edit_delete">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:inputType="textCapSentences"
                android:hint="@string/add_a_task"
                android:maxLines="1"
                android:backgroundTint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/edit_inputSend"/>

            <Button
                android:id="@+id/edit_inputSend"
                android:layout_width="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_height="30dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:background="@drawable/btn_edit"
                android:layout_margin="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/edit_rv"
                android:layout_width="match_parent"
                android:overScrollMode="never"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/edit_input"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

            </android.support.v7.widget.RecyclerView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView> <!--input + rv-->

    <Button
        android:id="@+id/edit_delete"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:background="@drawable/btn_edit"
        android:textColor="@color/white"
        android:padding="5dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"/> <!--delete-->

</android.support.constraint.ConstraintLayout>