<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:background="@drawable/dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:theme="@style/customBlackAccent"
        android:id="@+id/popup_titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/popup_titleInputSetTitle"
            android:theme="@style/customBlackAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title"
            android:maxLength="25"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout><!--desc input-->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/x1"
        app:layout_constraintTop_toBottomOf="@id/popup_titleInput"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/popup_ReminderIcon"
            android:src="@drawable/ic_alarm_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image" />

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/popup_ReminderIcon"
            android:id="@+id/popup_ReminderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reminder_set"/>

        <Switch
            android:id="@+id/popup_ReminderSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.constraint.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/popup_scrollGradients"
        app:layout_constraintTop_toBottomOf="@id/x1"
        android:scrollbars="none"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <Button
                tools:ignore="ButtonStyle"
                android:id="@+id/popup_buttonBlue"
                android:layout_margin="@dimen/popup_colourButton_margin"
                android:layout_width="@dimen/popup_colourButton_size"
                android:layout_height="@dimen/popup_colourButton_size"
                android:background="@drawable/gradient_blue_checked"/> <!--blue-->

            <Button
                tools:ignore="ButtonStyle"
                android:id="@+id/popup_buttonGreen"
                android:layout_margin="@dimen/popup_colourButton_margin"
                android:layout_width="@dimen/popup_colourButton_size"
                android:layout_height="@dimen/popup_colourButton_size"
                android:background="@drawable/gradient_green_unchecked" /> <!--green-->

            <Button
                tools:ignore="ButtonStyle"
                android:id="@+id/popup_buttonIbiza"
                android:layout_margin="@dimen/popup_colourButton_margin"
                android:layout_width="@dimen/popup_colourButton_size"
                android:layout_height="@dimen/popup_colourButton_size"
                android:background="@drawable/gradient_ibiza_unchecked"/> <!--ibiza-->

            <Button
                tools:ignore="ButtonStyle"
                android:id="@+id/popup_buttonKimoby"
                android:layout_margin="@dimen/popup_colourButton_margin"
                android:layout_width="@dimen/popup_colourButton_size"
                android:layout_height="@dimen/popup_colourButton_size"
                android:background="@drawable/gradient_kimoby_unchecked"/> <!--kimoby-->

            <Button
                tools:ignore="ButtonStyle"
                android:id="@+id/popup_buttonOrange"
                android:layout_margin="@dimen/popup_colourButton_margin"
                android:layout_width="@dimen/popup_colourButton_size"
                android:layout_height="@dimen/popup_colourButton_size"
                android:background="@drawable/gradient_orange_unchecked"/> <!--orange-->

            <Button
                tools:ignore="ButtonStyle"
                android:id="@+id/popup_buttonPeach"
                android:layout_margin="@dimen/popup_colourButton_margin"
                android:layout_width="@dimen/popup_colourButton_size"
                android:layout_height="@dimen/popup_colourButton_size"
                android:background="@drawable/gradient_peach_unchecked"/> <!--peach-->

            <Button
                tools:ignore="ButtonStyle"
                android:id="@+id/popup_buttonPurple"
                android:layout_margin="@dimen/popup_colourButton_margin"
                android:layout_width="@dimen/popup_colourButton_size"
                android:layout_height="@dimen/popup_colourButton_size"
                android:background="@drawable/gradient_purple_unchecked" /> <!--purple-->

            <Button
                tools:ignore="ButtonStyle"
                android:id="@+id/popup_buttonRed"
                android:layout_margin="@dimen/popup_colourButton_margin"
                android:layout_width="@dimen/popup_colourButton_size"
                android:layout_height="@dimen/popup_colourButton_size"
                android:background="@drawable/gradient_red_unchecked"/> <!--red-->

            <Button
                tools:ignore="ButtonStyle"
                android:id="@+id/popup_buttonSocialive"
                android:layout_margin="@dimen/popup_colourButton_margin"
                android:layout_width="@dimen/popup_colourButton_size"
                android:layout_height="@dimen/popup_colourButton_size"
                android:background="@drawable/gradient_socialive_unchecked"/> <!--socialive-->

            <Button
                tools:ignore="ButtonStyle"
                android:id="@+id/popup_buttonSylvia"
                android:layout_margin="@dimen/popup_colourButton_margin"
                android:layout_width="@dimen/popup_colourButton_size"
                android:layout_height="@dimen/popup_colourButton_size"
                android:background="@drawable/gradient_sylvia_unchecked"/> <!--sylvia-->

        </LinearLayout> <!--horizontal layout containing the buttons-->

    </HorizontalScrollView> <!--coloured buttons selection-->

    <Button
        android:id="@+id/popup_addTask"
        android:background="@drawable/btn_edit"
        android:text="@string/add"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"/> <!--add-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_colours_coming_soon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="13dp"/> <!--more colours coming soon!-->

</android.support.constraint.ConstraintLayout>
